--- a/CineQuebec.Windows/View/UsersControl.xaml
+++ b/CineQuebec.Windows/View/UsersControl.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CineQuebec.Windows.View"
       mc:Ignorable="d" 
-      d:DesignHeight="650" d:DesignWidth="772"
+      d:DesignHeight="650" d:DesignWidth="1000"
       xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
        xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
               Style="{StaticResource Page_Style}">
@@ -15,66 +15,26 @@
     <Grid  >
 
 
-        <!--<ItemsControl ItemsSource="{Binding }">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel  Orientation="Horizontal" HorizontalAlignment="Center"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Border BorderBrush="White" BorderThickness="5" Margin="20 0" CornerRadius="15">
-                        <md:Card  UniformCornerRadius="15" BorderThickness="5" BorderBrush="White" Width="300" Height="200" Background="#F6F6F8">
-                            <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
-                                <md:PackIcon Kind="User" Foreground="#29A3EC" HorizontalAlignment="Center" Height="30" Width="30"/>
-                                <TextBlock FontWeight="SemiBold" FontSize="16" Text="{Binding Username}" Margin="0 10 0 0"/>
-                                <TextBlock  FontSize="12" Text="{Binding DateAdhesion}" Margin="0 10 0 0"/>
-                                <md:PackIcon Kind="EllipsisHorizontal" HorizontalAlignment="Right"/>
-                            </StackPanel>
-
-                        </md:Card>
-                    </Border>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>-->
-
-
-        <!--<Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="5*"/>
-            
-        </Grid.RowDefinitions>-->
-
-
-        <Border Margin="0 20 0 20">
+        <Border Margin="0 10 0 10">
             <TextBlock Text="Utilisateurs abonnés" Foreground="White" HorizontalAlignment="Center" FontSize="20"  />
         </Border>
 
 
-        <Grid  Margin="60 60 60 20" Background="White" >
+        <Grid  Margin="50,91,70,-11" Background="White" >
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="6*"/>
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
 
 
             <DataGrid x:Name="dataGridAbonnes" Background="White" Grid.Column="0" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" ItemsSource="{Binding }" AutoGenerateColumns="False" SelectionChanged="DataGrid_SelectionChanged">
                 <DataGrid.Columns>
 
-                    <DataGridCheckBoxColumn CanUserResize="False" Width="auto">
-                        <DataGridCheckBoxColumn.HeaderTemplate>
 
-                            <DataTemplate>
-                                <CheckBox/>
-                            </DataTemplate>
-                        </DataGridCheckBoxColumn.HeaderTemplate>
-
-                    </DataGridCheckBoxColumn>
 
 
                     <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="auto" Header="#" x:Name="clnRang" Binding="{Binding Key}" />
-                    <!--<DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="*" Header="Nom d'utilisateur" Binding="{Binding Username}"  />-->
                     <DataGridTemplateColumn Header="Nom d'utilisateur" IsReadOnly="True" CanUserResize="False" Width="auto">
 
                         <DataGridTemplateColumn.CellTemplate>
@@ -92,11 +52,7 @@
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
 
-                    <!--<DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="*" Header="Date d'adhésion" Binding="{Binding DateAdhesion}"  />-->
                     <DataGridTextColumn x:Name="date" IsReadOnly="True"  Width="*" Header="Date d'adhésion" Binding="{Binding Value.DateAdhesion}"/>
-                    <!--<DataGridTextColumn IsReadOnly="True"  Width="*" Header="Date d'adhésion"/>
-                    <DataGridTextColumn IsReadOnly="True"  Width="*" Header="Date d'adhésion"/>
-                    <DataGridTextColumn IsReadOnly="True"  Width="*" Header="Date d'adhésion"/>-->
 
 
                     <DataGridTemplateColumn Header="Opérations" IsReadOnly="True" CanUserResize="False" Width="auto">
@@ -105,12 +61,12 @@
 
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <Button Style="{StaticResource DataGridEditBtn}">
+                                    <Button Style="{StaticResource DataGridEditBtn}" Click="Button_Edit">
                                         <md:PackIcon Kind="PencilOutline" Style="{StaticResource DataGridBtnIcon}"/>
                                     </Button>
 
-                                    <Button Style="{StaticResource DataGridDeleteBtn}">
-                                        <md:PackIcon Kind="Delete" Foreground="White" Style="{StaticResource DataGridBtnIcon}"/>
+                                    <Button Style="{StaticResource DataGridDeleteBtn}" Click="Button_delete">
+                                        <md:PackIcon Kind="Delete" Foreground="White" Style="{StaticResource DataGridBtnIcon}" />
                                     </Button>
                                 </StackPanel>
                             </DataTemplate>
@@ -121,20 +77,63 @@
             </DataGrid>
 
             <Grid x:Name="gridAbonneDetails"   Grid.Column="1" >
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Informations supplémentaires" Style="{StaticResource Text_Style}" Foreground="Black" FontWeight="Bold" Margin="10,0,0,0" Width="264" Height="32" />
                 <!--<Image HorizontalAlignment="Left" Height="79" Margin="31,31,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.437,0.501"/>-->
-                <StackPanel Orientation="Vertical">
+               
 
-                    <Border Height="79" Margin="31,31,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.437,0.501">
-                        <md:PackIcon Kind="User" 
-                   HorizontalAlignment="Stretch" 
-                     VerticalAlignment="Stretch"/>
-                    </Border>
-                    <StackPanel Orientation="Horizontal">
+                <Border   Grid.Row="1">
 
-                        <Label>Non d'utilisateur</Label>
-                        <TextBlock Margin="10 0 10 0" Text="{Binding Username}"/>
-                    </StackPanel>
-                </StackPanel>
+
+                    <DockPanel>
+                        <Border Width="80" Height="80"  Padding="3" Background="White" CornerRadius="100"
+             DockPanel.Dock="Top" HorizontalAlignment="Center" >
+
+                            <Ellipse>
+                                <Ellipse.Fill>
+                                    <ImageBrush ImageSource="../Ressources/images/users.png"/>
+                                </Ellipse.Fill>
+                            </Ellipse>
+
+                        </Border>
+
+                        <Separator Margin="25" DockPanel.Dock="Top" Height="0.8" Background="#7e5fdc"/>
+
+                        <StackPanel Orientation="Vertical" Grid.Row="1" >
+
+                         
+                            <StackPanel Orientation="Horizontal">
+
+                                <Label Content="Non d'utilisateur:" Width="120" FontWeight="Bold"/>
+                                <TextBlock Margin="10 0 10 0" Text="{Binding Username}"/>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" >
+
+                                <Label Content="Courriel:" Width="120"  FontWeight="Bold"/>
+                                <TextBlock Margin="10 0 10 0" Text="{Binding Email}"/>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" >
+
+                                <Label Content="Date d'adhésion:" Width="120"  FontWeight="Bold"/>
+                                <TextBlock Margin="10 0 10 0" Text="{Binding DateAdhesion}" />
+                            </StackPanel>
+                        </StackPanel>
+
+
+
+                    </DockPanel>
+
+
+
+                </Border>
+
 
             </Grid>
 
