--- a/CineQuebec.Windows/View/AddProjectionControl.xaml
+++ b/CineQuebec.Windows/View/AddProjectionControl.xaml
@@ -32,10 +32,7 @@
 
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Salle disponible :" />
-                    <ComboBox x:Name="descriptionComboBox" Width="400" Height="100">
-                        <ComboBoxItem Content="Salle 1 - 100 places" />
-                        <ComboBoxItem Content="Salle 2 - 120 places" />
-                        <ComboBoxItem Content="Salle 3 - 80 places" />
+                    <ComboBox x:Name="salleComboBox" Width="400" Height="100">
                     </ComboBox>
                 </StackPanel>
 
