--- a/CineQuebec.Windows/View/AdminHomeWindows.xaml
+++ b/CineQuebec.Windows/View/AdminHomeWindows.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CineQuebec.Windows.View.NavWindows"
+﻿<Window x:Class="CineQuebec.Windows.View.AdminHomeWindows"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:Menu="clr-namespace:CineQuebec.Windows.Utilities"
          xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="NavWindows" Height="700" Width="1300">
+        Title="AdminHomeWindows" Height="700" Width="1300" d:DataContext="{d:DesignInstance }">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
@@ -41,7 +41,7 @@
 
                             <Ellipse>
                                 <Ellipse.Fill>
-                                    <ImageBrush ImageSource="../Ressources/images/users.png"/>
+                                    <ImageBrush x:Name="imdProfile" ImageSource="{Binding imageUrl}"/>
                                 </Ellipse.Fill>
                             </Ellipse>
 
