--- a/CineQuebec.Windows/View/ConnexionControl.xaml
+++ b/CineQuebec.Windows/View/ConnexionControl.xaml
@@ -5,8 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CineQuebec.Windows.View"
              xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
+             Background="White"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800"
+             Style="{StaticResource Page_Style}"
              >
-    <Grid  >
+    <Grid  HorizontalAlignment="Center">
 
         <StackPanel VerticalAlignment="Center" >
             <Label Content="Courriel" 
