--- a/CineQuebec.Windows/View/InscriptionControl.xaml
+++ b/CineQuebec.Windows/View/InscriptionControl.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:CineQuebec.Windows.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
+             Background="White"
               Style="{StaticResource Page_Style}">
     <UserControl.Resources>
         <Style x:Key="CustomErrorControlOnErrorStyle" TargetType="TextBox">
