--- a/CineQuebec.Windows/View/AddProjectionControl.xaml
+++ b/CineQuebec.Windows/View/AddProjectionControl.xaml
@@ -32,12 +32,12 @@
 
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Salle disponible :" />
-                    <ComboBox x:Name="salleComboBox" Width="400" Height="100">
+                    <ComboBox x:Name="salleComboBox" Width="400" Height="100" Visibility="Collapsed">
                     </ComboBox>
                 </StackPanel>
 
 
-                <Button Style="{StaticResource menuButton}" Click="addProjectionButton_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="50" >
+                <Button x:Name="addProjectionButton" Style="{StaticResource menuButton}" Click="addProjectionButton_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="50" >
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <TextBlock Text="Ajouter" Padding="10" />
                     </StackPanel>
