--- a/CineQuebec.Windows/View/AddProjectionControl.xaml
+++ b/CineQuebec.Windows/View/AddProjectionControl.xaml
@@ -26,9 +26,15 @@
 
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <DatePicker x:Name="datePicker" />
-
-                    <mah:TimePicker x:Name="timePicker" Margin="10" Width="195" Height="25"/>
+                    <mah:TimePicker x:Name="timePicker" Width="209" Height="25" SelectedDateTime="{Binding SelectedTime, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBlock Text="{Binding ElementName=timePicker, Path=SelectedDateTime, StringFormat='HH:mm'}"/>
                 </StackPanel>
+
+                <Button x:Name="validerDateHeureButton" Style="{StaticResource menuButton}" Click="validerDateHeureButton_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="50" >
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <TextBlock Text="Valider" Padding="10" />
+                    </StackPanel>
+                </Button>
 
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Salle disponible :" />
