--- a/CineQuebec.Windows/View/MainWindow.xaml
+++ b/CineQuebec.Windows/View/MainWindow.xaml
@@ -3,50 +3,49 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CineQuebec.Windows"
         xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
         mc:Ignorable="d"
-        Title="{x:Static rs:Resource.app_name}" 
+        Title="{x:Static rs:Resource.app_name}"
         ResizeMode="NoResize"
         Height="700" Width="1300"
-         Icon="/Ressources/images/logoCinemaWithoutText.png"
-        Background="#212529"
-        >
-   
-    <Grid >
+        Icon="/Ressources/images/logoCinemaWithoutText.png"
+        Background="#212529">
+
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="100" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
-        <Border Grid.Row="0" Background="Black" >
-            
+
+        <Border Grid.Row="0" Background="Black">
+
             <Border.Effect>
-                <DropShadowEffect ShadowDepth="1"/>
+                <DropShadowEffect ShadowDepth="1" />
             </Border.Effect>
             <Grid>
 
-                <Image x:Name="click" HorizontalAlignment="Left" Margin="100 20 0 20" Source="/Ressources/images/CineQuebec.jpg" MouseLeftButtonDown="click_MouseLeftButtonDown_1"/>
-                <StackPanel Margin="0 0 50 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
-                    <Button Content="Inscription" Foreground="White" Margin="0,0,10,0" Width="100" Background="#FF021E27" Click="click_Inscription"/>
-                    <Button Content="Connexion" Foreground="White" Background="#FF1DC7C0" Height="35" Width="100"  Click="click_Connexion"/>
+                <Image x:Name="click" HorizontalAlignment="Left" Margin="100 20 0 20"
+                       Source="/Ressources/images/CineQuebec.jpg" MouseUp="click_MouseLeftButtonDown_1" />
+
+
+                <StackPanel Margin="0 0 50 0" Orientation="Horizontal" HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                    <Button Content="Inscription" Foreground="White" Margin="0,0,10,0" Width="100"
+                            Background="#FF021E27" Click="click_Inscription" />
+                    <Button Content="Connexion" Foreground="White" Background="#FF1DC7C0" Height="35" Width="100"
+                            Click="click_Connexion" />
 
                 </StackPanel>
             </Grid>
-     
+
 
         </Border>
-      
+
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-            <ContentControl x:Name="mainContentControl" 
-                           
-                            
-            />
+            <ContentControl x:Name="mainContentControl" />
 
         </ScrollViewer>
-      
 
-       
 
     </Grid>
 </Window>
