--- a/CineQuebec.Windows/App.xaml
+++ b/CineQuebec.Windows/App.xaml
@@ -1,32 +1,30 @@
 ﻿<Application x:Class="CineQuebec.Windows.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CineQuebec.Windows"
-             StartupUri="View/MainWindow.xaml"
-    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary Source="Ressources/RessourcesDictionary.xaml">
 
 
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
-            
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+
+                <ResourceDictionary
+                    Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="Styles/Button.xaml" />
                 <ResourceDictionary Source="Styles/Page.xaml" />
-                <ResourceDictionary Source="Styles/BtnHambuger.xaml"/>
-                <ResourceDictionary Source="Styles/MenuBtn.xaml"/>
-                <ResourceDictionary Source="Styles/Search.xaml"/>
-                <ResourceDictionary Source="Styles/DataGridStyle.xaml"/>
-                <ResourceDictionary Source="Styles/Text.xaml"/>
-                
-            </ResourceDictionary.MergedDictionaries>
-            
+                <ResourceDictionary Source="Styles/BtnHambuger.xaml" />
+                <ResourceDictionary Source="Styles/MenuBtn.xaml" />
+                <ResourceDictionary Source="Styles/Search.xaml" />
+                <ResourceDictionary Source="Styles/DataGridStyle.xaml" />
+                <ResourceDictionary Source="Styles/Text.xaml" />
 
+            </ResourceDictionary.MergedDictionaries>
 
 
         </ResourceDictionary>
 
-        
+
     </Application.Resources>
 </Application>
