--- a/CineQuebec.Windows/View/AddProjectionControl.xaml
+++ b/CineQuebec.Windows/View/AddProjectionControl.xaml
@@ -1,43 +1,40 @@
 <UserControl x:Class="CineQuebec.Windows.View.AddProjectionControl"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CineQuebec.Windows.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="1000"
-      xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-      xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
-      xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-     Style="{StaticResource Page_Style}">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="1000"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             Style="{StaticResource Page_Style}">
 
     <Grid>
         <Border Margin="0 20 0 20">
-            <TextBlock Text="Ajouter une projection" Foreground="White" HorizontalAlignment="Center" FontSize="20"  />
+            <TextBlock Text="Ajouter une projection" Foreground="White" HorizontalAlignment="Center" FontSize="20" />
         </Border>
 
 
-        <Grid  Margin="60 60 60 20" Background="White" >
+        <Grid Margin="60 60 60 20" Background="White">
             <StackPanel Orientation="Vertical">
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Titre FR :" />
-                    <TextBlock Text="{Binding FrenchTitle}" Margin="10"/>
+                    <TextBlock Text="{Binding FrenchTitle}" Margin="10" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <DatePicker x:Name="datePicker" />
 
-                    <mah:TimePicker x:Name="timePicker" Margin="10" Width="195" Height="25"/>
+                    <mah:TimePicker x:Name="timePicker" Margin="10" Width="195" Height="25" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Salle disponible :" />
-                    <ComboBox x:Name="salleComboBox" Width="400" Height="100">
-                    </ComboBox>
+                    <ComboBox x:Name="salleComboBox" Width="400" Height="100" />
                 </StackPanel>
 
 
-                <Button Style="{StaticResource menuButton}" Click="addProjectionButton_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="50" >
+                <Button Style="{StaticResource menuButton}" Click="addProjectionButton_Click"
+                        HorizontalAlignment="Center" VerticalAlignment="Top" Padding="50">
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <TextBlock Text="Ajouter" Padding="10" />
                     </StackPanel>
