--- a/CineQuebec.Windows/View/AddUpdateFilmControl.xaml
+++ b/CineQuebec.Windows/View/AddUpdateFilmControl.xaml
@@ -1,28 +1,27 @@
 <UserControl x:Class="CineQuebec.Windows.View.AddUpdateFilmControl"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CineQuebec.Windows.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="1000"
-      xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-       xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="1000"
+             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              Style="{StaticResource Page_Style}">
 
     <Grid>
-        <Button Style="{StaticResource menuButton}" Name="AddProjectionButton" Click="ToggleButton_AddProjection_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Padding="50" >
+        <Button Style="{StaticResource menuButton}" Name="AddProjectionButton" Click="ToggleButton_AddProjection_Click"
+                HorizontalAlignment="Right" VerticalAlignment="Top" Padding="50">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                <md:PackIcon Kind="Movie" Style="{StaticResource menuBtnIcon}"/>
+                <md:PackIcon Kind="Movie" Style="{StaticResource menuBtnIcon}" />
                 <TextBlock Text="Ajouter projection" Padding="10" />
             </StackPanel>
         </Button>
         <Border Margin="0 20 0 20">
-            <TextBlock x:Name="addUpdateTitle" Foreground="White" HorizontalAlignment="Center" FontSize="20"  />
+            <TextBlock x:Name="addUpdateTitle" Foreground="White" HorizontalAlignment="Center" FontSize="20" />
         </Border>
 
 
-        <Grid  Margin="60 60 60 20" Background="White" >
+        <Grid Margin="60 60 60 20" Background="White">
             <StackPanel Orientation="Vertical">
                 <!-- Titre FR -->
                 <StackPanel Orientation="Horizontal" Margin="10">
@@ -39,7 +38,8 @@
                 <!-- Date de sortie internationale -->
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Date de sortie internationale :" />
-                    <DatePicker x:Name="InternationalReleaseDate" SelectedDate="{Binding InternationalReleaseDate, Mode=TwoWay}" />
+                    <DatePicker x:Name="InternationalReleaseDate"
+                                SelectedDate="{Binding InternationalReleaseDate, Mode=TwoWay}" />
                 </StackPanel>
 
                 <!-- Duree du film en minutes -->
@@ -51,10 +51,12 @@
                 <!-- Description -->
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Description :" />
-                    <TextBox x:Name="description" Text="{Binding Description, Mode=TwoWay}"  Width="400" Height="100" TextWrapping="Wrap" AcceptsReturn="True" />
+                    <TextBox x:Name="description" Text="{Binding Description, Mode=TwoWay}" Width="400" Height="100"
+                             TextWrapping="Wrap" AcceptsReturn="True" />
                 </StackPanel>
 
-                <Button Style="{StaticResource menuButton}" Click="addUpdateButton_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="50" >
+                <Button Style="{StaticResource menuButton}" Click="addUpdateButton_Click" HorizontalAlignment="Center"
+                        VerticalAlignment="Top" Padding="50">
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <TextBlock x:Name="addUpdateButton" Padding="10" />
                     </StackPanel>
