--- a/CineQuebec.Windows/View/AdminFilmsControl.xaml
+++ b/CineQuebec.Windows/View/AdminFilmsControl.xaml
@@ -1,54 +1,66 @@
 <UserControl x:Class="CineQuebec.Windows.View.AdminFilmsControl"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CineQuebec.Windows.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="1000"
-      xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-       xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="1000"
+             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              Style="{StaticResource Page_Style}">
 
     <Grid>
-        <Button Style="{StaticResource menuButton}" Name="AddFilmButton" Click="ToggleButton_AddFilm_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Padding="50" >
+        <Button Style="{StaticResource menuButton}" Name="AddFilmButton" Click="ToggleButton_AddFilm_Click"
+                HorizontalAlignment="Right" VerticalAlignment="Top" Padding="50">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                <md:PackIcon Kind="Movie" Style="{StaticResource menuBtnIcon}"/>
+                <md:PackIcon Kind="Movie" Style="{StaticResource menuBtnIcon}" />
                 <TextBlock Text="Ajouter film" Padding="10" />
             </StackPanel>
         </Button>
         <Border Margin="0 20 0 20">
-            <TextBlock Text="Liste des films" Foreground="White" HorizontalAlignment="Center" FontSize="20"  />
+            <TextBlock Text="Liste des films" Foreground="White" HorizontalAlignment="Center" FontSize="20" />
         </Border>
 
 
-        <Grid  Margin="60 60 60 20"  Background="White" >
+        <Grid Margin="60 60 60 20" Background="White">
 
-            <DataGrid x:Name="dataGridFilms" Background="White" Margin="45 10" Grid.Column="0" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" ItemsSource="{Binding }" AutoGenerateColumns="False" SelectionChanged="DataGrid_SelectionChanged">
+            <DataGrid x:Name="dataGridFilms" Background="White" Margin="45 10" Grid.Column="0"
+                      Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"
+                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
+                      RowStyle="{DynamicResource DataGridRowStyle1}" ItemsSource="{Binding }"
+                      SelectionChanged="DataGrid_SelectionChanged">
                 <DataGrid.Columns>
-                    <DataGridTextColumn IsReadOnly="True" CanUserResize="True" Width="200"  Header="Titre FR" Binding="{Binding Value.Item1.FrenchTitle}" />
-                    
-                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="200" Header="Titre original" Binding="{Binding Value.Item1.OriginalTitle}" />
+                    <DataGridTextColumn IsReadOnly="True" CanUserResize="True" Width="200" Header="Titre FR"
+                                        Binding="{Binding Value.Item1.FrenchTitle}" />
 
-                    <DataGridTextColumn IsReadOnly="True"  CanUserResize="False" Width="100" Header="Note" Binding="{Binding Value.Item1.Rating}"/>
+                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="200" Header="Titre original"
+                                        Binding="{Binding Value.Item1.OriginalTitle}" />
 
-                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False"  Width="150" Header="Derniere projection" Binding="{Binding Value.Item2}"/>
+                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="100" Header="Note"
+                                        Binding="{Binding Value.Item1.Rating}" />
+
+                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="150"
+                                        Header="Derniere projection" Binding="{Binding Value.Item2}" />
 
                     <DataGridTemplateColumn Header="Operations" IsReadOnly="True" CanUserResize="False" Width="150">
                         <DataGridTemplateColumn.CellTemplate>
 
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <Button Style="{StaticResource DataGridEditBtn}" Click="ToggleButton_UpdateFilm_Click">
-                                        <md:PackIcon Kind="PencilOutline" Style="{StaticResource DataGridBtnIcon}"/>
+                                    <Button Style="{StaticResource DataGridEditBtn}"
+                                            Click="ToggleButton_UpdateFilm_Click">
+                                        <md:PackIcon Kind="PencilOutline" Style="{StaticResource DataGridBtnIcon}" />
                                     </Button>
 
-                                    <Button Style="{StaticResource DataGridDeleteBtn}" Click="ToggleButton_DeleteFilm_Click">
-                                        <md:PackIcon Kind="Delete" Foreground="White" Style="{StaticResource DataGridBtnIcon}"/>
+                                    <Button Style="{StaticResource DataGridDeleteBtn}"
+                                            Click="ToggleButton_DeleteFilm_Click">
+                                        <md:PackIcon Kind="Delete" Foreground="White"
+                                                     Style="{StaticResource DataGridBtnIcon}" />
                                     </Button>
 
-                                    <Button Style="{StaticResource DataGridEditBtn}" Click="ToggleButton_AddProjection_Click">
-                                        <md:PackIcon Kind="Plus" Foreground="White" Style="{StaticResource DataGridBtnIcon}"/>
+                                    <Button Style="{StaticResource DataGridEditBtn}"
+                                            Click="ToggleButton_AddProjection_Click">
+                                        <md:PackIcon Kind="Plus" Foreground="White"
+                                                     Style="{StaticResource DataGridBtnIcon}" />
                                     </Button>
                                 </StackPanel>
                             </DataTemplate>
@@ -59,6 +71,6 @@
             </DataGrid>
 
         </Grid>
-    
+
     </Grid>
 </UserControl>
