--- a/CineQuebec.Windows/View/AdminHomeControl.xaml
+++ b/CineQuebec.Windows/View/AdminHomeControl.xaml
@@ -1,10 +1,6 @@
 ﻿<UserControl x:Class="CineQuebec.Windows.View.AdminHomeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CineQuebec.Windows.View"
-             xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
              Style="{StaticResource Page_Style}">
     <UserControl.Resources>
         <Style x:Key="CustomErrorControlOnErrorStyle" TargetType="TextBox">
@@ -14,7 +10,7 @@
                         <StackPanel>
                             <AdornedElementPlaceholder x:Name="placeholder" />
                             <TextBlock FontSize="11" FontStyle="Italic" Foreground="Red"
-                                  Text="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" />
+                                       Text="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" />
                         </StackPanel>
                     </ControlTemplate>
                 </Setter.Value>
@@ -30,44 +26,45 @@
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="10" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="40" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="1"  Grid.Column="1" FontSize="36" Text="Mon profil" Grid.ColumnSpan="4" Margin="0,0,0,20" TextAlignment="Center" />
+        <TextBlock Grid.Row="1" Grid.Column="1" FontSize="36" Text="Mon profil" Grid.ColumnSpan="4" Margin="0,0,0,20"
+                   TextAlignment="Center" />
 
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="0, 20">
             <Label Width="120" Content="Utilisateur" FontFamily="Segoe UI" FontWeight="Black" />
-            <TextBox x:Name="txtUtilisateur" Width="200" Text="{Binding Username, ValidatesOnExceptions=True}"  Style="{StaticResource CustomErrorControlOnErrorStyle}" />
+            <TextBox x:Name="txtUtilisateur" Width="200" Text="{Binding Username, ValidatesOnExceptions=True}"
+                     Style="{StaticResource CustomErrorControlOnErrorStyle}" />
         </StackPanel>
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="0, 20">
             <Label Width="120" Content="Courriel" FontFamily="Segoe UI" FontWeight="Black" />
-            <TextBox x:Name="txtCourriel" Width="200" Text="{Binding Email, ValidatesOnExceptions=True}" InputScope="EmailUserName"  Style="{StaticResource CustomErrorControlOnErrorStyle}" />
+            <TextBox x:Name="txtCourriel" Width="200" Text="{Binding Email, ValidatesOnExceptions=True}"
+                     InputScope="EmailUserName" Style="{StaticResource CustomErrorControlOnErrorStyle}" />
         </StackPanel>
 
-        <StackPanel Grid.Row="4" Grid.Column="1"  Orientation="Horizontal" Margin="0,0,0,20">
+        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="0,0,0,20">
             <Label Content="Date d'adhésion" Width="120" FontFamily="Segoe UI" FontWeight="Black" />
 
             <TextBlock Text="{Binding DateAdhesion}" Width="200 " IsEnabled="True" />
         </StackPanel>
 
-     
 
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="6" >
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="6">
 
 
-            <Button x:Name="btnCreerCompte" Content="Modifier"  Margin="10" Background="CadetBlue"  />
-            
+            <Button x:Name="btnCreerCompte" Content="Modifier" Margin="10" Background="CadetBlue" />
+
         </StackPanel>
-
 
 
     </Grid>
