--- a/CineQuebec.Windows/View/UsersControl.xaml
+++ b/CineQuebec.Windows/View/UsersControl.xaml
@@ -1,41 +1,42 @@
 ﻿<UserControl x:Class="CineQuebec.Windows.View.UsersControl"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CineQuebec.Windows.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="650" d:DesignWidth="1000"
-      xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-       xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
-              Style="{StaticResource Page_Style}">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="650" d:DesignWidth="1000"
+             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+             Style="{StaticResource Page_Style}">
 
 
-
-    <Grid  >
+    <Grid>
 
 
         <Border Margin="0 10 0 10">
-            <TextBlock Text="Utilisateurs abonnés" Foreground="White" HorizontalAlignment="Center" FontSize="20"  />
+            <TextBlock Text="Utilisateurs abonnés" Foreground="White" HorizontalAlignment="Center" FontSize="20" />
         </Border>
 
 
-        <Grid  Margin="50,91,70,-11" Background="White" >
+        <Grid Margin="50,91,70,-11" Background="White">
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="6*"/>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="6*" />
+                <ColumnDefinition Width="3*" />
             </Grid.ColumnDefinitions>
 
 
-            <DataGrid x:Name="dataGridAbonnes" Background="White" Grid.Column="0" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" ItemsSource="{Binding }" AutoGenerateColumns="False" SelectionChanged="DataGrid_SelectionChanged">
+            <DataGrid x:Name="dataGridAbonnes" Background="White" Grid.Column="0"
+                      Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"
+                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
+                      RowStyle="{DynamicResource DataGridRowStyle1}" ItemsSource="{Binding }"
+                      SelectionChanged="DataGrid_SelectionChanged">
                 <DataGrid.Columns>
 
 
-
-
-                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="auto" Header="#" x:Name="clnRang" Binding="{Binding Key}" />
-                    <DataGridTemplateColumn Header="Nom d'utilisateur" IsReadOnly="True" CanUserResize="False" Width="auto">
+                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="auto" Header="#"
+                                        x:Name="clnRang" Binding="{Binding Key}" />
+                    <DataGridTemplateColumn Header="Nom d'utilisateur" IsReadOnly="True" CanUserResize="False"
+                                            Width="auto">
 
                         <DataGridTemplateColumn.CellTemplate>
 
@@ -43,16 +44,18 @@
                                 <StackPanel Orientation="Horizontal">
                                     <Border Width="25" CornerRadius="50" Margin="0 0 10 0" Background="Red">
 
-                                        <TextBlock Text="{Binding  Value.Username[0]}"  VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" Margin="0 0 0 1"/>
+                                        <TextBlock Text="{Binding  Value.Username[0]}" VerticalAlignment="Center"
+                                                   HorizontalAlignment="Center" Foreground="White" Margin="0 0 0 1" />
                                     </Border>
-                                    <TextBlock Text="{Binding Value.Username}"   VerticalAlignment="Center"/>
+                                    <TextBlock Text="{Binding Value.Username}" VerticalAlignment="Center" />
                                 </StackPanel>
                             </DataTemplate>
 
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
 
-                    <DataGridTextColumn x:Name="date" IsReadOnly="True"  Width="*" Header="Date d'adhésion" Binding="{Binding Value.DateAdhesion}"/>
+                    <DataGridTextColumn x:Name="date" IsReadOnly="True" Width="*" Header="Date d'adhésion"
+                                        Binding="{Binding Value.DateAdhesion}" />
 
 
                     <DataGridTemplateColumn Header="Opérations" IsReadOnly="True" CanUserResize="False" Width="auto">
@@ -62,11 +65,12 @@
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
                                     <Button Style="{StaticResource DataGridEditBtn}" Click="Button_Edit">
-                                        <md:PackIcon Kind="PencilOutline" Style="{StaticResource DataGridBtnIcon}"/>
+                                        <md:PackIcon Kind="PencilOutline" Style="{StaticResource DataGridBtnIcon}" />
                                     </Button>
 
                                     <Button Style="{StaticResource DataGridDeleteBtn}" Click="Button_delete">
-                                        <md:PackIcon Kind="Delete" Foreground="White" Style="{StaticResource DataGridBtnIcon}" />
+                                        <md:PackIcon Kind="Delete" Foreground="White"
+                                                     Style="{StaticResource DataGridBtnIcon}" />
                                     </Button>
                                 </StackPanel>
                             </DataTemplate>
@@ -76,60 +80,60 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <Grid x:Name="gridAbonneDetails"   Grid.Column="1" >
+            <Grid x:Name="gridAbonneDetails" Grid.Column="1">
 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="70"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="70" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Informations supplémentaires" Style="{StaticResource Text_Style}" Foreground="Black" FontWeight="Bold" Margin="10,0,0,0" Width="264" Height="32" />
+                <TextBlock HorizontalAlignment="Center" Text="Informations supplémentaires"
+                           Style="{StaticResource Text_Style}" Foreground="Black" FontWeight="Bold" Margin="10,0,0,0"
+                           Width="264" Height="32" />
                 <!--<Image HorizontalAlignment="Left" Height="79" Margin="31,31,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.437,0.501"/>-->
-               
 
-                <Border   Grid.Row="1">
+
+                <Border Grid.Row="1">
 
 
                     <DockPanel>
-                        <Border Width="80" Height="80"  Padding="3" Background="White" CornerRadius="100"
-             DockPanel.Dock="Top" HorizontalAlignment="Center" >
+                        <Border Width="80" Height="80" Padding="3" Background="White" CornerRadius="100"
+                                DockPanel.Dock="Top" HorizontalAlignment="Center">
 
                             <Ellipse>
                                 <Ellipse.Fill>
-                                    <ImageBrush ImageSource="../Ressources/images/users.png"/>
+                                    <ImageBrush ImageSource="../Ressources/images/users.png" />
                                 </Ellipse.Fill>
                             </Ellipse>
 
                         </Border>
 
-                        <Separator Margin="25" DockPanel.Dock="Top" Height="0.8" Background="#7e5fdc"/>
+                        <Separator Margin="25" DockPanel.Dock="Top" Height="0.8" Background="#7e5fdc" />
 
-                        <StackPanel Orientation="Vertical" Grid.Row="1" >
+                        <StackPanel Orientation="Vertical">
 
-                         
+
                             <StackPanel Orientation="Horizontal">
 
-                                <Label Content="Non d'utilisateur:" Width="120" FontWeight="Bold"/>
-                                <TextBlock Margin="10 0 10 0" Text="{Binding Username}"/>
+                                <Label Content="Non d'utilisateur:" Width="120" FontWeight="Bold" />
+                                <TextBlock Margin="10 0 10 0" Text="{Binding Username}" />
                             </StackPanel>
 
-                            <StackPanel Orientation="Horizontal" >
+                            <StackPanel Orientation="Horizontal">
 
-                                <Label Content="Courriel:" Width="120"  FontWeight="Bold"/>
-                                <TextBlock Margin="10 0 10 0" Text="{Binding Email}"/>
+                                <Label Content="Courriel:" Width="120" FontWeight="Bold" />
+                                <TextBlock Margin="10 0 10 0" Text="{Binding Email}" />
                             </StackPanel>
 
-                            <StackPanel Orientation="Horizontal" >
+                            <StackPanel Orientation="Horizontal">
 
-                                <Label Content="Date d'adhésion:" Width="120"  FontWeight="Bold"/>
+                                <Label Content="Date d'adhésion:" Width="120" FontWeight="Bold" />
                                 <TextBlock Margin="10 0 10 0" Text="{Binding DateAdhesion}" />
                             </StackPanel>
                         </StackPanel>
 
 
-
                     </DockPanel>
-
 
 
                 </Border>
