--- a/CineQuebec.Windows/View/AbonneView/NavWindowsAbonneView.xaml
+++ b/CineQuebec.Windows/View/AbonneView/NavWindowsAbonneView.xaml
@@ -7,138 +7,74 @@
         xmlns:Menu="clr-namespace:CineQuebec.Windows.Utilities"
          xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="NavWindows" Height="700" Width="1300">
+        d:DataContext="{d:DesignInstance }"
+        Title="NavWindows" Height="700" Width="1300"
+        Background="#212529">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </Window.Resources>
+  
+    
     <Grid>
-        <Border Background="#212529"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="231"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+        <Border Grid.Row="0" Background="Black">
 
+            <Border.Effect>
+                <DropShadowEffect ShadowDepth="1" />
+            </Border.Effect>
+            <Grid>
 
-
-            <Grid  Grid.Column="0" >
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-
-
-                <Border Background="#272B2F" CornerRadius="0,50,0,30" Grid.Row="1">
-
-
-                    <DockPanel>
-                        <Border Width="80" Height="80"  Padding="3" Background="White" CornerRadius="100"
-                            DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="30 30 0 0">
-
-                            <Ellipse>
-                                <Ellipse.Fill>
-                                    <ImageBrush ImageSource="../../Ressources/images/users.png"/>
-                                </Ellipse.Fill>
-                            </Ellipse>
-
-                        </Border>
-
-                        <TextBlock x:Name="AbonneUsername" Text="xx" DockPanel.Dock="Top"  Style="{StaticResource Text_Style}"/>
-
-
-                        <Separator Margin="25" DockPanel.Dock="Top" Height="0.8" Background="#7e5fdc"/>
-
-                        <StackPanel DockPanel.Dock="Top" >
-
-
-
-
-                            <Button Style="{StaticResource menuButton}" Click="Button_Accueil_Click">
-                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                                    <md:PackIcon Kind="Home" Style="{StaticResource menuBtnIcon}"/>
-                                    <TextBlock Text="Accueil" />
-                                </StackPanel>
-                            </Button>
-
-                            <Button Style="{StaticResource menuButton}"  Click="ToggleButton_Preferences_Click">
-                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                                    <md:PackIcon Kind="Users" Style="{StaticResource menuBtnIcon}"/>
-                                    <TextBlock Text="Mes préférences" />
-                                </StackPanel>
-                            </Button>
-
-                            <Button Style="{StaticResource menuButton}" Click="ToggleButton_Projections_Click" >
-                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                                    <md:PackIcon Kind="Movie" Style="{StaticResource menuBtnIcon}"/>
-                                    <TextBlock Text="Mes projections" />
-                                </StackPanel>
-                            </Button>
-
-
-
-
-
-                        </StackPanel>
-
-
-
-                        <Button Style="{StaticResource menuButton}"  VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Margin="15 0 15 20" Click="Button_Deconnexion_Click">
-                            <StackPanel Orientation="Horizontal">
-                                <md:PackIcon Kind="Logout" Style="{StaticResource menuBtnIcon}"/>
-                                <TextBlock Text="Déconexion" />
-                            </StackPanel>
-                        </Button>
-                    </DockPanel>
-
-
-
-                </Border>
-
-            </Grid>
-
-            <Grid Grid.ColumnSpan="2" Margin="221,10,10,-10" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="93*"/>
-                    <ColumnDefinition Width="292*"/>
-                </Grid.ColumnDefinitions>
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="5*"/>
-                    <RowDefinition Height="80"/>
-
-                </Grid.RowDefinitions>
-
-                <Border Grid.ColumnSpan="2"  />
-
-                <Grid Width="200" HorizontalAlignment="Left" Grid.Column="1" Margin="384,0,0,0">
-
-                    <TextBlock Margin="20 0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
-                               Panel.ZIndex="1" Text="Recherche"
-                               Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty, Converter={StaticResource BoolToVis}}"/>
-
-                    <TextBox x:Name="txtSearch" Style="{StaticResource search_style}" Height="30" />
-
-                    <md:PackIcon Kind="Magnify" Width="15" VerticalAlignment="Center"
-                                 Margin="0 0 15 0" Foreground="#b0b9c6" HorizontalAlignment="Right"/>
-                </Grid>
-
-
-
-                <ContentControl x:Name="mainContentControl" 
+                <Image x:Name="click" HorizontalAlignment="Left" Margin="100 20 0 20"
+                       Source="/Ressources/images/CineQuebec.jpg" MouseUp="Button_Accueil_Click" />
                 
-                 Margin="20,92,20,0" Grid.ColumnSpan="2" Grid.RowSpan="2"
-                                
-                 />
+                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 0 50 0" VerticalAlignment="Center">
+                    
+                  
+                    
+                    <Button Content="Mes préférences" Foreground="White" Margin="0,0,10,0" Width="100"
+                            Background="#FF021E27" Click="ToggleButton_Preferences_Click" />
+                    
+                    <Button Content="Mes projections" Foreground="White" Margin="0,0,10,0" Width="100"
+                            Background="#FF021E27" Click="ToggleButton_Projections_Click" />
+
+                    
+                </StackPanel>
 
 
+                <StackPanel Margin="0 0 50 0" Orientation="Horizontal" HorizontalAlignment="Right"
+                            VerticalAlignment="Center" MouseUp="btn_profilAbonne">
+                    
+                    <Border Width="40" Height="40" Padding="3" Background="White" CornerRadius="100"
+                            DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="30 0 20 0">
 
+                        <Ellipse>
+                            <Ellipse.Fill>
+                                <ImageBrush x:Name="imdProfile" ImageSource="{Binding imageUrl}" />
+                            </Ellipse.Fill>
+                        </Ellipse>
+
+                    </Border>
+
+              
+                    <Button Content="Déconnexion" Foreground="White" Background="#FF1DC7C0" Height="35" Width="100"
+                            Click="Button_Deconnexion_Click" />
+
+                </StackPanel>
             </Grid>
-        </Grid>
+
+
+        </Border>
+
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+            <ContentControl x:Name="mainContentControl" />
+
+        </ScrollViewer>
+
 
     </Grid>
 </Window>
